# mcp-env-keychain

./: .gitignore  .npmrc  CLAUDE.md  LICENSE  README.md  SECURITY.md  biome.json  bunfig.toml  package.json  pyproject.toml  tsconfig.json
.github/: copilot-instructions.md  dependabot.yml
.github/copilot-babysit/: CI-GATES.md  RALPH-EVAL.md  README.md  SPIKE.md  STATE.md  labels.json  prompt-triage.md  schema-state.json  schema-triage.json
.github/copilot-babysit/scripts/: gather.sh  lib.sh  respond.sh  triage.sh
.github/instructions/: code-review.instructions.md  pr-babysit.instructions.md
.github/scripts/: copilot-review-and-resolve.mjs
.github/workflows/: auto-release.yml  ci.yml  copilot-bulk-reviewfix.yml  copilot-request-review.yml  release.yml
src/: constants.ts  exec.ts  index.ts  keychain.ts  prompts.ts  server.ts  tools.ts  touchid.ts  types.ts
src/k_mcp/: __init__.py  _security.py  server.py
tests/: discovery.py  discovery.test.ts  elicitation.test.ts  exec.test.ts  helpers.ts  live-verify.mjs  live.py  migration.test.ts  prompts.test.ts  protocol.py  protocol.test.ts  smoke.py  smoke.test.ts  stdio_handshake.py  touchid.test.ts  touchid_gate.py
