[project]
name = "k-mcp"
version = "0.1.0"
description = "MCP server for storing and using env secrets in the macOS Keychain"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2",
    "keyring>=24.0",
]

[project.scripts]
k-mcp = "k_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k_mcp"]
